Fixing overflow on slider.

--- a/spring-2015/sass/_calm.scss
+++ b/spring-2015/sass/_calm.scss
@@ -385,6 +385,7 @@ body.love-calm{
 		}
 	}
 	#colour-picker{
+		overflow: hidden;
 		.image-wrap{
 			position: relative;
 			@media (min-width: $screen-md-min){
